[package]
name = "peat-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
automerge-backend = ["peat-protocol/automerge-backend"]

[dependencies]
peat-mesh = { workspace = true }
peat-protocol = { path = "../peat-protocol", features = ["ditto-backend"] }
peat-schema = { path = "../peat-schema" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4"
rand = "0.8"

# TUI dependencies (will be added later for visualization)
# ratatui = "0.25"
# crossterm = "0.27"

[dev-dependencies]
criterion = { workspace = true }
