[package]
name = "m5stack-core2-peat"
version = "0.1.0"
edition = "2021"
authors = ["Defense Unicorns"]
license = "Apache-2.0"
description = "Peat Protocol demonstration on M5Stack Core2 (ESP32)"
repository = "https://github.com/defenseunicorns/peat"

[dependencies]
# ESP-IDF HAL and services
esp-idf-svc = { version = "0.50", default-features = false, features = [
    "std",
    "binstart",
    "native"
] }
esp-idf-hal = "0.45"

# Logging
log = "0.4"

# Error handling
anyhow = "1.0"

# Base64 — for decoding the shared mesh genesis blob
base64 = "0.22"

# Display
display-interface-spi = "0.5"
mipidsi = "0.8"
embedded-graphics = "0.8"

# Peat libraries (external repo - radicle)
peat-btle = { path = "../../../peat-btle", default-features = false, features = ["esp32"] }

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"
debug = false
lto = true

[profile.dev]
debug = true
opt-level = "z"
