[project]
name = "port-agent"
version = "0.1.0"
description = "OODA loop agent runner for HIVE port operations simulation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
ollama = ["openai>=1.50.0"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
port-agent = "port_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/port_agent"]
