[project]
name = "port-agent-bridge"
version = "0.1.0"
description = "MCP server bridging Gastown agents to HIVE state for port operations simulation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
port-bridge = "port_agent_bridge.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/port_agent_bridge"]
